solved some code smell issues